2007-02-06 Jens Tkotz <jens@peino.de> 1.6-RC1-b20

 * CHANGE:

  Removed Java Applet for cropping and added Javascript Cropper from
  David Spurr http://www.defusion.org.uk/
  Its using Prototype & script.aculo.us

  You can now crop thumbnails and the full Version.

2007-02-02 Jens Tkotz <jens@peino.de> 1.6-RC1-b19

 * Fix: Duplicate Accesskeys on startpage and thumbview.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b18

 * Fix: Avoid warning in save_photos.php

 * Fix: There seems to be an album version issue.
        That causes a lot of warnings.
        An album version bump should do the trick.

 Thanks again to Peter Schumacher.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b17

 * Fix: Uninitialized return value in locateDir
   Thanks to Peter Schumacher.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b16

 * Change: PageTitle in photo was then Gallery.
           Now is <(sub)album title> :: <Image Name>

2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b15

 * Fix: Bug #1305215, enhanced files that are treated as executable
        on win32.

2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b14

 * Bug/RFE #1589714, Better errormessage which .htaccess is meant.

2007-01-30 Jens Tkotz <jens@peino.de> 1.6-RC1-b13

 * Fix: Bug #1121796

 * Fix: Correct pages jump to next and previous block in navigator.

2007-01-29 Jens Tkotz <jens@peino.de> 1.6-RC1-b12

 * Feature Freeze for Gallery 1.6 *

 * New: New album option to open dimensions-links as popups.
   \- Configversion bump
   \- Albumversion bump

 * Change: Make emailing / register in separate tabs.

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b11

 * Fix: Warning in thumbnail view.

 * Code cleanup in view_album.php

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b10

 FIX: Some header things were called to early
      and broke integration in phpBB2

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b9

 Change: Code nicify layout/userData.inc

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b8
