@@ -1,3 +1,8 @@
+2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b21
+
+ * Change: Defining a minimum size for cropping thumbs.
+ 		   Currently the fullsize image must be at least 25x25px
+ 		   
 2007-02-06 Jens Tkotz <jens@peino.de> 1.6-RC1-b20
 
  * CHANGE:
